hphp/hack/test/typecheck/array/disallow_darray_with_int_keys_where_vect_like_array_is_required.php.like_types.exp
File "disallow_darray_with_int_keys_where_vect_like_array_is_required.php", line 16, characters 10-31:
Invalid return type (Typing[4110])
File "disallow_darray_with_int_keys_where_vect_like_array_is_required.php", line 15, characters 18-30:
Expected ~array<string> because it is an unenforceable type
File "disallow_darray_with_int_keys_where_vect_like_array_is_required.php", line 16, characters 10-31:
But got darray<int, string>
